deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images
spec:
  template:
    spec:
      containers:
      - name: registry
        image: docker.io/mtaylor91/registry:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /data
          name: data-volume
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: docker-registry-data
