deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: images
spec:
  ports:
  - name: registry
    port: 80
    protocol: TCP
    targetPort: 5000
